# ml2

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  report.tex
lib/: ising.f90  ising_basis.f90
programs/: class_test.f90  lasso.py  linreg.f90  logreg.f90  matrix_to_png.py  pkl2bin.py  reg_nn.f90  reg_nn_convergence.f90  reg_nn_test_couplings.f90  reg_nn_test_spins.f90
